AC_INIT(DESCRIPTION)

COLLAPSE_FORM_DATA="TRUE"

AC_ARG_ENABLE(old-style-formdata,
              [  --enable-old-style-formdata     do NOT collapse elements in the formData with the same name into a single element with multiple values], 
              [old_style_formdata=yes; COLLAPSE_FORM_DATA="FALSE"])

AC_SUBST(COLLAPSE_FORM_DATA)

AC_OUTPUT(R/CGIwithR.R)

echo ""
echo "      *****************************************"
echo ""
echo "  After the installation of this R package is complete"
echo "  copy the files R.cgi and .Rprofile in"
echo "      ${R_PACKAGE_DIR}/cgi-bin/"
echo "  to the cgi-bin area of your Web server. If necessary, "
echo "  modify the settings in the first part of R.cgi to "
echo "  suit your local configuration."
echo ""
echo "      *****************************************"
echo ""
